--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -3,39 +3,42 @@
   <table>
     <tr>
       <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
+        <span><a href="">Future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-      <span><a href="">future</a></span>
+      <span><a href="">Future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-       <span><a href="">future</a></span>
-      </td>
-    </tr>
-    <tr>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
+       <span><a href="">Future</a></span>
       </td>
     </tr>
     <tr>
       <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
+        <span><a href="">Future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
+        <span><a href="">Future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <span><a href="">future</a></span>
+        <span><a href="">Future</a></span>
+      </td>
+    </tr>
+    <tr>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">Future</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">Future</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">Future</a></span>
       </td>
     </tr>
   </table>
 </div>
+  <video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">
+    <source src="../../assets/medias/lane_detection.mp4" type="video/mp4">
+  </video>
 <div id="seattle_based_slogan">
   <h3> SEATTLE BASED </h3>
   <p> Frontend Programmer</p>
