--- a/myapp/src/app/blog/blog.component.css
+++ b/myapp/src/app/blog/blog.component.css
@@ -4,6 +4,7 @@ html, body {
   margin: 0; }
 
 div#utility {
+  margin-top: 10%;
   color: #ffa117;
   height: auto;
   margin-bottom: 0;
@@ -11,18 +12,18 @@ div#utility {
   div#utility h1#portfolio {
     margin-top: 5%;
     margin-bottom: 3%;
-    font-size: 4.5em;
+    font-size: 4.2em;
     color: #ffa117;
     text-align: center; }
   div#utility span {
-    margin-left: 8%;
-    font-size: 1.4em; }
+    margin-left: 15%;
+    font-size: 1em; }
   div#utility a#right_side {
     width: auto;
     height: auto;
     color: #ffa117;
     position: absolute;
-    right: 8%;
+    right: 15%;
     font-size: 1em;
     font-weight: 600;
     text-align: right; }
@@ -39,17 +40,16 @@ div#content {
     margin-right: auto;
     margin-left: auto; }
     div#content ul li {
-      padding: 0px;
-      padding-top: 0px;
-      margin-top: 8%;
-      margin-bottom: 8%;
+      margin-top: 2%;
+      margin-bottom: 6%;
       height: 26%;
       width: 100%;
-      -webkit-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
-      -moz-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
-      box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
+      -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
       border-radius: 5px 5px; }
       div#content ul li h1 {
+        padding-top: 3%;
         text-align: center;
         border-radius: 2px;
         font-size: 1.4em;
@@ -60,7 +60,7 @@ div#content {
       div#content ul li div#bottom_bar {
         text-align: right;
         position: relative;
-        bottom: -65%;
+        bottom: -60%;
         right: 5%;
         height: 15%;
         width: auto;
@@ -83,5 +83,88 @@ div#content {
           font-weight: bold;
           font-size: .7em;
           background-color: #ffa117; }
+
+@media (orientation: landscape) {
+  div#utility {
+    cursor: default;
+    margin-top: 10%;
+    color: #ffa117;
+    height: auto;
+    margin-bottom: 0;
+    opacity: .7; }
+    div#utility h1#portfolio {
+      margin-top: 5%;
+      margin-bottom: 3%;
+      font-size: 6em;
+      color: #ffa117;
+      text-align: center; }
+    div#utility span {
+      margin-left: 15%;
+      font-size: 3em; }
+    div#utility a#right_side {
+      width: auto;
+      height: auto;
+      color: #ffa117;
+      position: absolute;
+      right: 15%;
+      font-size: 2em;
+      font-weight: 600;
+      text-align: right; }
+
+  div#content {
+    width: 100%;
+    background-color: white; }
+    div#content ul {
+      background-color: white;
+      width: 75%;
+      height: 110%;
+      padding-top: 20px;
+      list-style: none;
+      margin-right: auto;
+      margin-left: auto; }
+      div#content ul li {
+        margin-top: 2%;
+        margin-bottom: 6%;
+        height: 35%;
+        width: 100%;
+        -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        border-radius: 5px 5px; }
+        div#content ul li h1 {
+          text-align: center;
+          border-radius: 2px;
+          font-size: 2em;
+          background-color: #ffa117;
+          color: white;
+          width: 100%;
+          height: 20%;
+          opacity: 1; }
+        div#content ul li div#bottom_bar {
+          text-align: right;
+          position: relative;
+          bottom: -50%;
+          right: 5%;
+          height: 15%;
+          width: auto;
+          border-radius: 5px;
+          opacity: 1; }
+          div#content ul li div#bottom_bar img {
+            float: right;
+            display: block;
+            height: 100%;
+            width: auto;
+            margin-right: 2%; }
+          div#content ul li div#bottom_bar button#demo {
+            float: right;
+            width: 15%;
+            height: 100%;
+            opacity: 1;
+            padding: 1%;
+            border-radius: 10%;
+            color: white;
+            font-weight: bold;
+            font-size: 1em;
+            background-color: #ffa117; } }
 
 /*# sourceMappingURL=blog.component.css.map */
