--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -42,13 +42,13 @@ html, body {
       position: relative;
       bottom: 13px;
       right: 5px;
-      background-color: black;
+      background-color: #ffa117;
       width: 100%;
-      font-size: 2em;
+      font-size: 1.5em;
       letter-spacing: .4em;
       text-decoration: none;
       opacity: .9;
-      color: #ffa117; }
+      color: black; }
 
 div#menu_button {
   text-align: center;
@@ -84,9 +84,9 @@ div#seattle_based_slogan {
   height: auto;
   margin-top: 20%; }
   div#seattle_based_slogan h3 {
-    font-size: 2.7em;
     font-family: 'Ultra', serif;
     padding-bottom: 0;
+    font-size: 2.7em;
     opacity: .7; }
   div#seattle_based_slogan p {
     color: #ffa117;
@@ -96,15 +96,26 @@ img#seattle_skyline {
   margin-top: 50%;
   height: auto;
   width: 100%;
-  opacity: .1;
+  opacity: .15;
   display: block;
-  filter: grayscale(100%);
   -moz-box-shadow: inset 0 0 100px #ffffff;
   -webkit-box-shadow: inset 0 0 100px #ffffff;
   box-shadow: inset 0 0 100px #ffffff; }
 
+img#seattle_skyline_active {
+  opacity: 0.8;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out; }
+
+video#detect_lanes {
+  height: auto;
+  opacity: .7;
+  display: block;
+  margin: 0;
+  padding: 0; }
+
 div#tanner_card {
-  padding-top: 10px;
   width: 100%;
   height: 10%;
   text-align: right;
@@ -181,13 +192,13 @@ div#about_section {
         position: relative;
         bottom: 30px;
         right: 20px;
-        background-color: black;
+        background-color: #ffa117;
         width: 100%;
         font-size: 2em;
         letter-spacing: .5em;
         text-decoration: none;
         opacity: .9;
-        color: #ffa117; }
+        color: black; }
 
   div#seattle_based_slogan h3 {
     font-size: 5em; }
@@ -234,6 +245,32 @@ div#about_section {
       z-index: 3;
       font-size: 1.2em; } }
 @media (orientation: landscape) {
+  #menu {
+    position: static;
+    height: 80%;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: .5em; }
+    #menu table {
+      border-collapse: collapse;
+      text-align: center; }
+    #menu table tr {
+      height: auto; }
+    #menu table td {
+      width: 33.333%; }
+      #menu table td a {
+        position: relative;
+        bottom: 35px;
+        right: 20px;
+        background-color: #ffa117;
+        width: 100%;
+        font-size: 2em;
+        letter-spacing: .5em;
+        text-decoration: none;
+        opacity: .9;
+        color: black; }
+
   div#seattle_based_slogan h3 {
     font-size: 5em; }
   div#seattle_based_slogan p {
@@ -260,6 +297,7 @@ div#about_section {
       bottom: 10%;
       z-index: 0; }
     div#tanner_card p#portfolio {
+      cursor: default;
       position: relative;
       width: auto;
       height: auto;
@@ -284,7 +322,7 @@ div#about_section {
       display: block;
       width: 50%;
       position: relative;
-      color: white;
+      color: #ffa117;
       left: 10%;
       top: -80%; }
     div#about_section p {
@@ -327,6 +365,32 @@ div#about_section {
       z-index: 3;
       font-size: .9em; } }
 @media (min-width: 1441px) {
+  #menu {
+    position: static;
+    height: 80%;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: .5em; }
+    #menu table {
+      border-collapse: collapse;
+      text-align: center; }
+    #menu table tr {
+      height: auto; }
+    #menu table td {
+      width: 33.333%; }
+      #menu table td a {
+        position: relative;
+        bottom: 35px;
+        right: 20px;
+        background-color: #ffa117;
+        width: 100%;
+        font-size: 3em;
+        letter-spacing: .5em;
+        text-decoration: none;
+        opacity: .9;
+        color: black; }
+
   div#seattle_based_slogan h3 {
     font-size: 5em; }
   div#seattle_based_slogan p {
