--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -54,13 +54,13 @@
         position: relative;
         bottom: 13px;
         right: 5px;
-        background-color: black;
+        background-color: $cust-orange;
         width: 100%;
-        font-size: 2em;
+        font-size: 1.5em;
         letter-spacing: .4em;
         text-decoration: none;
         opacity: .9;
-        color: $cust-orange;
+        color: black;
       }
     }
   }
@@ -97,15 +97,12 @@ div#seattle_based_slogan {
   height: auto;
   margin-top: 20%;
   h3 {
-    font-size: 2.7em;
     font-family: 'Ultra', serif;
-   // padding-top: 10%;
     padding-bottom: 0;
+    font-size: 2.7em;
     opacity: .7;
-    // opacity: .6;
-  }
+      }
   p {
-    // font-family: 'Slabo 13px', serif;
     color: $link-font-color;
     letter-spacing: .8px;
   }
@@ -114,16 +111,26 @@ img#seattle_skyline {
   margin-top: 50%;
   height: auto;
   width: 100%;
-  opacity: .1;
+  opacity: .15;
   display: block;
-  filter: grayscale(100%);
   -moz-box-shadow: inset 0 0 100px #ffffff;
   -webkit-box-shadow: inset 0 0 100px #ffffff;
   box-shadow: inset 0 0 100px #ffffff;
 }
-
+img#seattle_skyline_active {
+  opacity: 0.8;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+video#detect_lanes{
+  height: auto;
+  opacity: .7;
+  display: block;
+  margin: 0;
+  padding:0;
+}
 div#tanner_card {
-  padding-top: 10px;
   width: 100%;
   height: 10%;
   text-align: right;
@@ -187,10 +194,6 @@ div#about_section {
     font-size: 1em;
   }
 }
-
-
-//tablet and larger screen sizes
-//tablet and larger screen sizes
 @media (min-width: $breakpoint-tablet){
   #menu {
     position: static;
@@ -214,13 +217,13 @@ div#about_section {
           position: relative;
           bottom: 30px;
           right: 20px;
-          background-color: black;
+          background-color: $cust-orange;
           width: 100%;
           font-size: 2em;
           letter-spacing: .5em;
           text-decoration: none;
           opacity: .9;
-          color: $cust-orange;
+          color: black;
         }
       }
     }
@@ -277,7 +280,40 @@ div#about_section {
     }
   }
 }
- @media (orientation: landscape) {
+@media (orientation: landscape) {
+   #menu {
+     position: static;
+     height: 80%;
+     width: 90%;
+     margin-right: auto;
+     margin-left: auto;
+     font-size: .5em;
+     table {
+       border-collapse: collapse;
+       text-align: center;
+     }
+     table {
+       tr {
+         height: auto;
+       }
+       td {
+         width: 33.333%;
+         // height: 100%;
+         a {
+           position: relative;
+           bottom: 35px;
+           right: 20px;
+           background-color: $cust-orange;
+           width: 100%;
+           font-size: 2em;
+           letter-spacing: .5em;
+           text-decoration: none;
+           opacity: .9;
+           color: black;
+         }
+       }
+     }
+   }
    div#seattle_based_slogan {
      h3 {
        font-size: 5em;
@@ -310,6 +346,7 @@ div#about_section {
       z-index: 0;
     }
     p#portfolio {
+      cursor: default;
       position: relative;
       width: auto;
       height: auto;
@@ -338,7 +375,7 @@ div#about_section {
       display: block;
       width: 50%;
       position: relative;
-      color:white;
+      color:$cust-orange;
       left: 10%;
       top: -80%;
     }
@@ -388,8 +425,39 @@ div#about_section {
      }
    }
 }
-
 @media (min-width: $breakpoint-desk-lrg){
+  #menu {
+    position: static;
+    height: 80%;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: .5em;
+    table {
+      border-collapse: collapse;
+      text-align: center;
+    }
+    table {
+      tr {
+        height: auto;
+      }
+      td {
+        width: 33.333%;
+        a {
+          position: relative;
+          bottom: 35px;
+          right: 20px;
+          background-color: $cust-orange;
+          width: 100%;
+          font-size: 3em;
+          letter-spacing: .5em;
+          text-decoration: none;
+          opacity: .9;
+          color: black;
+        }
+      }
+    }
+  }
   div#seattle_based_slogan {
     h3 {
       font-size: 5em;
@@ -466,6 +534,8 @@ div#about_section {
   }
 }
 
+
+//TODO: Need to refactor
 @mixin gradient-animation( $start, $end, $transTime ){
   background-size: 100%;
   background-image: -webkit-linear-gradient($start, $end);
