--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -39,9 +39,10 @@
   <video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">
     <source src="../../assets/medias/lane_detection.mp4" type="video/mp4">
   </video>
+<span id="video_caption">Video Lane Detection</span>
 <div id="seattle_based_slogan">
   <h3> SEATTLE BASED </h3>
-  <p> Frontend Programmer</p>
+  <p>Application Developer</p>
 <img id="seattle_skyline"
      src="../../assets/medias/seattle_skyline.png">
 </div>
