--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -79,10 +79,12 @@ div#menu_button_flip {
   border-width: 1px; }
 
 div#seattle_based_slogan {
+  margin-top: 45%;
   display: block;
   text-align: center;
   height: auto;
-  margin-top: 20%; }
+  padding-top: auto;
+  padding-bottom: auto; }
   div#seattle_based_slogan h3 {
     font-family: 'Ultra', serif;
     padding-bottom: 0;
@@ -91,29 +93,35 @@ div#seattle_based_slogan {
   div#seattle_based_slogan p {
     color: #ffa117;
     letter-spacing: .8px; }
-
-img#seattle_skyline {
-  margin-top: 50%;
-  height: auto;
-  width: 100%;
-  opacity: .15;
-  display: block;
-  -moz-box-shadow: inset 0 0 100px #ffffff;
-  -webkit-box-shadow: inset 0 0 100px #ffffff;
-  box-shadow: inset 0 0 100px #ffffff; }
-
-img#seattle_skyline_active {
-  opacity: 0.8;
-  transition: opacity .25s ease-in-out;
-  -moz-transition: opacity .25s ease-in-out;
-  -webkit-transition: opacity .25s ease-in-out; }
+  div#seattle_based_slogan img#seattle_skyline {
+    margin-top: 45%;
+    height: auto;
+    width: 100%;
+    opacity: .15;
+    display: block;
+    -moz-box-shadow: inset 0 0 100px #ffffff;
+    -webkit-box-shadow: inset 0 0 100px #ffffff;
+    box-shadow: inset 0 0 100px #ffffff; }
+  div#seattle_based_slogan img#seattle_skyline_active {
+    opacity: 0.8;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out; }
 
 video#detect_lanes {
+  margin-top: 5%;
   height: auto;
-  opacity: .7;
-  display: block;
-  margin: 0;
-  padding: 0; }
+  opacity: .5;
+  display: block; }
+
+span#video_caption {
+  float: right;
+  margin-right: 3%;
+  margin-top: .5%;
+  font-weight: bold;
+  font-size: .7em;
+  text-align: right;
+  padding-right: -25%; }
 
 div#tanner_card {
   width: 100%;
@@ -380,6 +388,7 @@ div#about_section {
     #menu table td {
       width: 33.333%; }
       #menu table td a {
+        padding: 1%;
         position: relative;
         bottom: 35px;
         right: 20px;
@@ -392,9 +401,11 @@ div#about_section {
         color: black; }
 
   div#seattle_based_slogan h3 {
-    font-size: 5em; }
+    font-size: 8em;
+    opacity: .7; }
   div#seattle_based_slogan p {
-    font-size: 2em; }
+    font-weight: lighter;
+    font-size: 3em; }
 
   div#tanner_card {
     padding-top: 10px;
@@ -480,7 +491,7 @@ div#about_section {
     div#footer p {
       text-align: center;
       color: #ffa117;
-      font-size: .6em;
+      font-size: .5em;
       letter-spacing: 2px; } }
 @media (max-width: 425px) and (orientation: landscape) {
   div#footer {
@@ -534,7 +545,7 @@ div#about_section {
         width: auto; }
     div#footer p {
       font-size: 1em; } }
-@media (min-width: 751px) and (max-width: 1599px) {
+@media (min-width: 751px) and (max-width: 1441px) {
   div#footer {
     display: inline-block;
     position: fixed;
@@ -562,7 +573,7 @@ div#about_section {
       color: #ffa117;
       font-size: 1.2em;
       letter-spacing: 3px; } }
-@media (min-width: 1600px) {
+@media (min-width: 1442px) {
   div#footer {
     display: inline-block;
     position: fixed;
