--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -39,13 +39,15 @@ html, body {
   #menu table td {
     width: 33.333%; }
     #menu table td a {
+      padding-left: 5%;
+      padding-right: 0;
       position: relative;
       bottom: 13px;
       right: 5px;
       background-color: #ffa117;
       width: 100%;
       font-size: 1.5em;
-      letter-spacing: .4em;
+      letter-spacing: .2em;
       text-decoration: none;
       opacity: .9;
       color: black; }
@@ -57,9 +59,6 @@ div#menu_button {
   color: #333333;
   font-size: 3em;
   font-weight: lighter;
-  letter-spacing: 20px;
-  margin-right: auto;
-  margin-left: auto;
   border-bottom: solid;
   bottom: 0px;
   border-width: 1px; }
@@ -71,9 +70,6 @@ div#menu_button_flip {
   color: #333333;
   font-size: 3em;
   font-weight: lighter;
-  letter-spacing: 20px;
-  margin-right: auto;
-  margin-left: auto;
   margin-top: 3%;
   border-top: solid;
   border-width: 1px; }
@@ -389,13 +385,14 @@ div#about_section {
       width: 33.333%; }
       #menu table td a {
         padding: 1%;
+        padding-right: 0;
         position: relative;
         bottom: 35px;
         right: 20px;
         background-color: #ffa117;
         width: 100%;
         font-size: 3em;
-        letter-spacing: .5em;
+        letter-spacing: .3em;
         text-decoration: none;
         opacity: .9;
         color: black; }
