--- a/myapp/src/app/blog/blog.component.html
+++ b/myapp/src/app/blog/blog.component.html
@@ -14,7 +14,7 @@
   <a id="right_side" target="_blank"
         href='../../assets/TannerPhan%202017%20Resume.pdf'>Resume</a>
 </div>
-<div id="content">
+<div id="content" #seattle>
   <ul>
     <li *ngFor="let project of projects"
         [style.background-image] = " 'url(' + project.path + ')'"
