--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div id="menu_button_flip"> menu </div>
+<!--<div id="menu_button_flip"> menu </div>-->
 <div id="menu">
   <table>
     <tr>
@@ -36,9 +36,10 @@
     </tr>
   </table>
 </div>
-  <video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">
-    <source src="../../assets/medias/lane_detection.mp4" type="video/mp4">
-  </video>
+  <!--<video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">-->
+    <!--<source src="../../assets/medias/lane_detection.mp4" type="video/mp4">-->
+  <!--</video>-->
+<img id="lane_detection" src="../../assets/medias/lane_detection.gif">
 <span id="video_caption">Video Lane Detection</span>
 <div id="seattle_based_slogan">
   <h3> SEATTLE BASED </h3>
