--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -33,14 +33,15 @@ div#content{
   opacity: .9;
   width: 90%;
   background-color: white;
-  ul{
-    background-color: white;
-    width: 85%;
-    height: 110%;
-    padding-top: 20px;
-    list-style: none;
     margin-right: auto;
     margin-left: auto;
+  ul{
+    margin-right: auto;
+    margin-left: auto;
+    width: 85%;
+    height: 100%;
+    padding-top: 20px;
+    list-style: none;
     li{
       margin-top: 2%;
       margin-bottom: 6%;
@@ -94,7 +95,7 @@ div#content{
   }
 }
 @media(orientation: landscape) {
- div#utility{
+  div#utility{
     background-color: #333333;
     cursor: default;
     padding-top: 2%;
@@ -105,12 +106,13 @@ div#content{
     h1#portfolio{
       padding-top: 5%;
       padding-bottom: 5%;
-      font-size: 6em;
+      font-size: 7em;
       color: $cust-orange;
       text-align: center;
     }
     span{
       margin-left: 15%;
+      margin-bottom: 1%;
       font-size: 3em; }
     a#right_side{
       width: auto;
@@ -177,6 +179,97 @@ div#content{
             font-weight: bold;
             font-size: 1em;
             background-color: $cust-orange;
+          }
+        }
+      }
+    }
+  }
+  @media(min-width: $breakpoint-desk-lrg) {
+    div#utility{
+      background-color: #333333;
+      cursor: default;
+      padding-top: 2%;
+      color: $cust-orange;
+      height:30%;
+      margin-bottom: 0;
+      opacity: 1;
+      h1#portfolio{
+        padding-top: 3%;
+        padding-bottom: 3%;
+        font-size: 9em;
+        color: $cust-orange;
+        text-align: center;
+      }
+      span{
+        margin-left: 15%;
+        margin-bottom: 1%;
+        font-size: 3em; }
+      a#right_side{
+        width: auto;
+        height: auto;
+        color: $cust-orange;
+        position: absolute;
+        right: 15%;
+        font-size: 2em;
+        font-weight: 600;
+        text-align: right;
+      }
+    }
+    div#content{
+      width: 100%;
+      ul{
+        opacity: .9;
+        height: 100%;
+        width: 75%;
+        list-style: none;
+        margin-right: auto;
+        margin-left: auto;
+        li{
+          margin-top: 4%;
+          margin-bottom: 2%;
+          height: 35%;
+          width: 100%;
+          -webkit-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
+          -moz-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
+          box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
+          border-radius: 5px 5px;
+          h1{
+            text-align: center;
+            border-radius: 2px;
+            font-size: 2em;
+            background-color: $cust-orange;
+            color: white;
+            width: 100%;
+            height: 20%;
+            opacity: 1;
+          }
+          div#bottom_bar{
+            text-align: right;
+            position: relative;
+            height: 30%;
+            width: auto;
+            bottom: -53%;
+            border-radius: 5px;
+            opacity: 1;
+            img{
+              float: right;
+              display: block;
+              height: 50%;
+              width: auto;
+              margin-right: 2%;
+            }
+            button#demo{
+              float: right;
+              width: 15%;
+              height: 100%;
+              opacity: 1;
+              padding: 1%;
+              border-radius: 10%;
+              color: white;
+              font-weight: bold;
+              font-size: 1em;
+              background-color: $cust-orange;
+            }
           }
         }
       }
