--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -35,7 +35,7 @@
 #menu {
   position: static;
   height: 80%;
-  width: 90%;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   font-size: .5em;
@@ -71,14 +71,14 @@
 //BASE
 @mixin menu_base() {
   text-align: center;
-  width: 80%;
+  width: 90%;
   height: auto;
   color: #333333;
-  font-size: 3em;
+  font-size: 4em;
   font-weight: lighter;
-  //letter-spacing: .1em;
-  //margin-right: auto;
-  //margin-left: auto;
+  letter-spacing: .2em;
+  margin-right: auto;
+  margin-left: auto;
 }
 div#menu_button {
   @include menu_base();
@@ -127,20 +127,20 @@ div#seattle_based_slogan {
     -webkit-transition: opacity .25s ease-in-out;
   }
 }
-video#detect_lanes{
+img#lane_detection{
   margin-top: 5%;
   height: auto;
   opacity: .5;
   display: block;
 }
 span#video_caption{
+  height: auto;
   float: right;
   margin-right: 3%; margin-top:.5%;
   font-weight: bold;
   font-size: .7em;
   text-align: right;
   padding-right: -25%;
-
 }
 div#tanner_card {
   width: 100%;
@@ -473,6 +473,7 @@ div#about_section {
     }
   }
   div#seattle_based_slogan {
+    margin-top: 15%;
     h3 {
       font-size: 8em;
       opacity: .7;
@@ -622,8 +623,7 @@ div#about_section {
   }
 }
 //mobile landscape
-@media(max-width: $breakpoint-mobile) and (orientation: landscape) {
-  div#footer{
+@media(max-width: $breakpoint-mobile) and (orientation: landscape) { div#footer{
     width: 100%;
     height: 20%;
     // @include gradient-animation( #ffa117, #464646, 1s);
