style: 	1) added secondary, darkgreen. 	2) move gif down portfolio section.

--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -1,6 +1,6 @@
 @import'../palette.scss';
 div#utility{
-  background-color: #333333;
+  background-color: #1d4e41;
   color: $cust-orange;
   height: auto;
   opacity: 1;
@@ -96,7 +96,7 @@ div#content{
 }
 @media(orientation: landscape) {
   div#utility{
-    background-color: #333333;
+    background-color: #1d4e41;
     cursor: default;
     padding-top: 2%;
     color: $cust-orange;
