--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -6,10 +6,10 @@
         <span><a href="">Future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-      <span><a href="">Future</a></span>
+        <span><a href="">Future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-       <span><a href="">Future</a></span>
+        <span><a href="">Future</a></span>
       </td>
     </tr>
     <tr>
@@ -36,21 +36,21 @@
     </tr>
   </table>
 </div>
-  <!--<video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">-->
-    <!--<source src="../../assets/medias/lane_detection.mp4" type="video/mp4">-->
-  <!--</video>-->
-<img id="lane_detection" src="../../assets/medias/lane_detection.gif">
-<span id="video_caption">Video Lane Detection</span>
+<!--<video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">-->
+<!--<source src="../../assets/medias/lane_detection.mp4" type="video/mp4">-->
+<!--</video>-->
 <div id="seattle_based_slogan">
   <h3> SEATTLE BASED </h3>
   <p>Application Developer</p>
+</div>
 <img id="seattle_skyline"
      src="../../assets/medias/seattle_skyline.png">
-</div>
+<img id="lane_detection" src="../../assets/medias/lane_detection.gif">
+<!--<span id="video_caption">Video Lane Detection</span>-->
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
   <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
-  <p id="portfolio" (click)="click_portfolio()"> Portfolio 	&rArr;</p>
+  <p id="portfolio" (click)="click_portfolio()"> Portfolio &rArr;</p>
 </div>
 <div id="about_section">
   <div>
@@ -58,13 +58,13 @@
   <h2> About </h2>
   <br>
   <p>
-      I'm an application developer. I focus on IoT applications and development.
-      I've had the fundamental backgrounds: Physics, Math, Computer Science in my undergrad education.
-      In 2015, I shifted my focus toward web application development.
-      And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
-      Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup
-      with some really passionate people. Now I'm looking for a position as a front-end application developer.
-    </p>
+    I'm an application developer. I focus on IoT applications and development.
+    I've had the fundamental backgrounds: Physics, Math, Computer Science in my undergrad education.
+    In 2015, I shifted my focus toward web application development.
+    And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
+    Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup
+    with some really passionate people. Now I'm looking for a position as a front-end application developer.
+  </p>
 </div>
 <div id="footer">
 <span id="socialmedia">
@@ -81,6 +81,6 @@
 <img id="social_icon" src="assets/medias/github.png">
 </a>
 </span>
-<!--<p>{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</p>-->
-<p> &copy; Tanner Phan 2017</p>
+  <!--<p>{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</p>-->
+  <p> &copy; Tanner Phan 2017</p>
 </div>
