edit: rework landing page. remove: old table menu

--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -1,5 +1,4 @@
-<!--<div id="menu_button_flip"> menu </div>-->
-<div id="menu">
+<!--<div id="menu">
   <table>
     <tr>
       <td [ngStyle]="setStyle()">
@@ -35,18 +34,16 @@
       </td>
     </tr>
   </table>
-</div>
-<!--<video id="detect_lanes" #movieplayer loop autoplay="autoplay" preload="auto">-->
-<!--<source src="../../assets/medias/lane_detection.mp4" type="video/mp4">-->
-<!--</video>-->
+</div>-->
 <div id="seattle_based_slogan">
-  <h3> SEATTLE BASED </h3>
-  <p>Application Developer</p>
 </div>
-<img id="seattle_skyline"
-     src="../../assets/medias/seattle_skyline.png">
+<span id="banner-text">
+  <h1> SEATTLE BASED </h1>
+  <p>Application Developer</p>
+</span>
+<!--<img id="seattle_skyline"-->
+     <!--src="../../assets/medias/seattle_skyline.png">-->
 <img id="lane_detection" src="../../assets/medias/lane_detection.gif">
-<!--<span id="video_caption">Video Lane Detection</span>-->
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
   <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
