--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -31,6 +31,7 @@
     font-style: italic;
   }
 }
+/*
 
 #menu {
   position: static;
@@ -439,60 +440,255 @@ div#about_section {
      }
    }
 }
+*/
 
-@media (min-width: $breakpoint-desk-lrg){
-  #menu {
-    position: static;
-    height: 80%;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    font-size: .5em;
-    table {
-      border-collapse: collapse;
-      text-align: center;
+@media (max-width: $breakpoint-tablet - 1px){
+  #seattle_based_slogan{
+    filter: grayscale(.8) blur(2px);
+    height: 20%;
+    width: auto;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-size:  150% auto;
+    background-repeat: no-repeat;
+    //background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 50% 50%;
+    opacity: .8;
+  }
+  #banner-text{
+    text-align: center;
+    position: absolute;
+    top: 0;
+   h1 {
+     filter: grayscale(.5) blur(0px);
+     padding-top: 6%;
+     font-size: 2.5em;
+     opacity: .6;
+   }
+   p {
+     color: $cust-orange;
+     margin-left: 8px;
+     font-weight: 500;
+     font-size: 1em;
+     opacity: 1;
+   }
+ }
+  #lane_detection{
+    height: 20%;
+    opacity: .7;
+    display: block;
+  }
+  #tanner_card {
+    //padding-top: 10px;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    color: $cust-orange;
+    font-size: 3em;
+    background-color: #dcdcdc;
+    background-size: contain;
+    background-repeat: no-repeat;
+    img {
+      position: relative;
+      width: auto;
+      height: 140%;
+      top: -40%;
+      right: -10%;
+      display: block;
+      bottom: 10%;
+      z-index: 0;
     }
-    table {
-      tr {
-        height: auto;
-      }
-      td {
-        width: 33.333%;
-        a {
-          padding: 1%;
-          padding-right: 0;
-          position: relative;
-          bottom: 35px;
-          right: 20px;
-          background-color: $cust-orange;
-          width: 100%;
-          font-size: 3em;
-          letter-spacing: .3em;
-          text-decoration: none;
-          opacity: .9;
-          color: black;
-        }
-      }
+    p#portfolio {
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      font-size: 1.2em;
+      top: -90%;
+      right: 10%;
+      animation: move-the-object 1s infinite;
     }
   }
-  div#seattle_based_slogan {
-    h3 {
-      font-size: 8em;
+  #about_section {
+    width: 100%;
+    height: 80%;
+    background: #1d4e41 url('../../assets/medias/running.png');
+    background-position: center;
+    background-size: auto 100% ;
+    // background-size: cover;
+    background-repeat: no-repeat;
+    //filter: grayscale(50%);
+    div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .7;
+      width: auto;
+    }
+    h2 {;
+      font-size: 4em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: $cust-orange;
+      left: 5%;
+      top: -90%;
+    }
+    p {
+      position: relative;
+      left: 5%;
+      top: -90%;
+      padding-bottom: 20%;
+      color: white;
+      width: 85%;
+      height: auto;
+      z-index: 3;
+      font-size: .9em;
+    }
+  }
+}
+
+
+@media (min-width: $breakpoint-tablet) and (max-width: $breakpoint-desk-lrg - 1px){
+  #seattle_based_slogan{
+    text-align: center;
+    padding: auto;
+    padding-top: 0;
+    height: 25%;
+    width: auto;
+    filter: grayscale(.7) blur(2px);
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-size: 150% auto;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    opacity: .8;
+  }
+  #banner-text{
+    text-align: center;
+    position: absolute;
+    top: 5%;
+    h1 {
+      filter: grayscale(.5) blur(0px);
+      padding-top: 2%;
+      font-size: 5em;
       opacity: .7;
     }
     p {
-      font-weight: lighter;
-      font-size: 3em;
+      color: $cust-orange;
+      margin-left: 8px;
+      font-weight: 500;
+      font-size:  1.5em;
+      opacity: 1;
     }
   }
-  div#tanner_card {
+  #lane_detection{
+    height: 35%;
+    opacity: .7;
+    display: block;
+  }
+  #tanner_card {
     padding-top: 10px;
     width: 100%;
     height: 20%;
     text-align: right;
     color: $cust-orange;
     font-size: 2em;
-    background-color: #1d4e41;
+    background-color: #dcdcdc;
+    background-size: contain;
+    background-repeat: no-repeat;
+    img {
+      position: relative;
+      width: auto;
+      height: 140%;
+      top: -40%;
+      right: -10%;
+      display: block;
+      bottom: 10%;
+      z-index: 0;
+    }
+    p#portfolio {
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      font-size: 2.5em;
+      top: -90%;
+      right: 15%;
+      animation: move-the-object 1s infinite;
+    }
+  }
+  #about_section {
+    width: 100%;
+    height: 60%;
+    background: #1d4e41 url('../../assets/medias/running.png');
+    background-position: center;
+    background-size: 100% auto;
+    // background-size: cover;
+    background-repeat: no-repeat;
+    //filter: grayscale(50%);
+    div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .7;
+      width: auto;
+    }
+    h2 {;
+      font-size: 4em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: $cust-orange;
+      left: 10%;
+      top: -80%;
+    }
+    p {
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: white;
+      width: 55%;
+      height: auto;
+      z-index: 3;
+      font-size: 1.2em;
+    }
+  }
+}
+
+@media (min-width: $breakpoint-desk-lrg){
+  #seattle_based_slogan {
+    filter: grayscale(.7) blur(3px);
+    text-align: center;
+    width: auto;
+    height: 35%;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-position: 50% 70%;
+    background-repeat: no-repeat;
+    background-size: 120% auto;
+  }
+  #banner-text{
+    position: absolute;
+    text-align: center;
+    top: 5%;
+    h1 {
+      font-size: 8em;
+      opacity: .7;
+    }
+    p {
+      color: $cust-orange;
+      font-weight: lighter;
+      font-size: 3em;
+    }
+  }
+  #lane_detection{
+    height: 50%;
+    opacity: .7;
+    display: block;
+  }
+  #tanner_card {
+    padding-top: 10px;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    color: $cust-orange;
+    font-size: 2em;
+    background-color: #dcdcdc;
     background-size: contain;
     background-repeat: no-repeat;
     img {
@@ -516,7 +712,7 @@ div#about_section {
       animation: move-the-object 1s infinite;
     }
   }
-  div#about_section {
+  #about_section {
     width: 100%;
     background: white url('../../assets/medias/running.png');
     background-position: center;
