--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -1,6 +1,6 @@
 @import'../palette.scss';
 div#utility{
-  background-color: #1d4e41;
+  background-color: #333333;
   color: $cust-orange;
   height: auto;
   opacity: 1;
@@ -32,7 +32,7 @@ div#utility{
 div#content{
   opacity: .9;
   width: 90%;
-  background-color: white;
+   background-color: white;
     margin-right: auto;
     margin-left: auto;
   ul{
@@ -47,9 +47,9 @@ div#content{
       margin-bottom: 6%;
       height: 26%;
       width: 100%;
-      -webkit-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
-      -moz-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
-      box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
+      -webkit-box-shadow: -5px 7px 19px 0px #333333;
+      -moz-box-shadow: -5px 7px 19px 0px #333333;
+      box-shadow: -5px 7px 19px 0px #333333;
       border-radius: 5px 5px;
       h1{
         padding-top: 3%;
@@ -232,9 +232,9 @@ div#content{
           margin-bottom: 2%;
           height: 35%;
           width: 100%;
-          -webkit-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
-          -moz-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
-          box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
+          -webkit-box-shadow: -5px 7px 19px 0px #333333;
+          -moz-box-shadow: -5px 7px 19px 0px #333333;
+          box-shadow: -5px 7px 19px 0px #333333;
           border-radius: 5px 5px;
           h1{
             text-align: center;
