layout: cross browser compatability fix"

--- a/myapp/src/app/palette.scss
+++ b/myapp/src/app/palette.scss
@@ -1,11 +1,11 @@
 $white: #ffffff;
-$breakpoint-mobile: 425px;
-$breakpoint-tablet: 750px;
+$breakpoint-mobile: 340px;
+$breakpoint-tablet: 700px;
 $breakpoint-desk: 1441px;
-$breakpoint-desk-lrg: 1441px;
+$breakpoint-desk-lrg: 1200px;
 $opacity_inactive: .8;
 $background_uri: none;
-
+$seattle_green: #364a27;
 
 $cust-orange: #ffa117;
 $link-font-color: $cust-orange;
