--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -1,23 +1,24 @@
-@import'../palette.scss';
-div#utility{
-  background-color: #333333;
+@import '../palette.scss';
+/*
+
+div#utility {
   color: $cust-orange;
-  height: auto;
+  height: 30%;
   opacity: 1;
   padding-bottom: 3%;
-  h1#portfolio{
+  h1#portfolio {
     padding-top: 5%;
     padding-bottom: 3%;
     font-size: 4.2em;
     color: $cust-orange;
     text-align: center;
   }
-  span{
+  span {
     //position: relative;
     margin-left: 15%;
     font-size: 1em;
   }
-  a#right_side{
+  a#right_side {
     text-decoration: none;
     width: auto;
     height: auto;
@@ -29,20 +30,23 @@ div#utility{
     text-align: right;
   }
 }
-div#content{
+
+div#content {
+  background-color: $seattle_green;
   opacity: .9;
   width: 90%;
-   background-color: white;
+  height: 70%;
+  margin-right: auto;
+  margin-left: auto;
+  ul {
+    display: flex;
     margin-right: auto;
     margin-left: auto;
-  ul{
-    margin-right: auto;
-    margin-left: auto;
-    width: 85%;
+    width: 95%;
     height: 100%;
     padding-top: 20px;
     list-style: none;
-    li{
+    li {
       margin-top: 2%;
       margin-bottom: 6%;
       height: 26%;
@@ -51,7 +55,7 @@ div#content{
       -moz-box-shadow: -5px 7px 19px 0px #333333;
       box-shadow: -5px 7px 19px 0px #333333;
       border-radius: 5px 5px;
-      h1{
+      h1 {
         padding-top: 3%;
         text-align: center;
         border-radius: 2px;
@@ -61,7 +65,7 @@ div#content{
         width: 100%;
         height: 15%;
       }
-      div#bottom_bar{
+      div#bottom_bar {
         text-align: right;
         position: relative;
         bottom: -60%;
@@ -70,7 +74,7 @@ div#content{
         width: auto;
         border-radius: 5px;
         opacity: 1;
-        img{
+        img {
           float: right;
           display: block;
           height: 100%;
@@ -78,7 +82,7 @@ div#content{
           margin-right: 2%;
           //height: auto;
         }
-        button#demo{
+        button#demo {
           float: right;
           width: 15%;
           height: 100%;
@@ -94,58 +98,65 @@ div#content{
     }
   }
 }
+*/
+
+body{
+  background-color: $seattle_green;
+}
 @media(orientation: landscape) {
-  div#utility{
+  div#utility {
     background-color: #333333;
     cursor: default;
     padding-top: 2%;
     color: $cust-orange;
-    height:30%;
+    height: 30%;
     margin-bottom: 0;
     opacity: 1;
-    h1#portfolio{
+    h1#portfolio {
       padding: 0;
       padding-top: 5%;
-      //padding-bottom: 5%;
       font-size: 7em;
       color: $cust-orange;
       text-align: center;
-
     }
-    span{
+    span {
       margin-left: 15%;
-      font-size: 5em; }
-    a#right_side{
+      font-size: 3em;
+    }
+    a#right_side {
       width: auto;
       height: auto;
       color: $cust-orange;
       position: absolute;
-      top: 32%;
+      top: 20%;
       right: 15%;
-      font-size: 2em;
+      font-size: 1em;
       font-weight: 600;
       text-align: right;
     }
   }
-  div#content{
+  div#content {
+    background-color: $seattle_green;
     width: 100%;
-    ul{
+    ul {
+      display: flex;
       opacity: .9;
       height: 100%;
-      width: 75%;
+      width: 95%;
       list-style: none;
       margin-right: auto;
       margin-left: auto;
-      li{
-        margin-top: 4%;
-        margin-bottom: 2%;
+      li {
+        margin: 1%;
+        //margin-top: 4%;
+        //margin-bottom: 2%;
         height: 35%;
-        width: 100%;
-        -webkit-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
-        box-shadow: -5px 7px 19px 0px rgba(0,0,0,0.75);
+        width: 30%;
+        -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
         border-radius: 5px 5px;
-        h1{
+        h1 {
           text-align: center;
           border-radius: 2px;
           font-size: 2em;
@@ -155,7 +166,7 @@ div#content{
           height: 20%;
           opacity: 1;
         }
-        div#bottom_bar{
+        div#bottom_bar {
           text-align: right;
           position: relative;
           height: 30%;
@@ -163,14 +174,14 @@ div#content{
           bottom: -53%;
           border-radius: 5px;
           opacity: 1;
-          img{
+          img {
             float: right;
             display: block;
             height: 50%;
             width: auto;
             margin-right: 2%;
           }
-          button#demo{
+          button#demo {
             float: right;
             width: 15%;
             height: 100%;
@@ -187,66 +198,68 @@ div#content{
     }
   }
   @media(min-width: $breakpoint-desk-lrg) {
-    div#utility{
+    div#utility {
       background-color: #333333;
       cursor: default;
       padding-top: 2%;
       color: $cust-orange;
-      height:30%;
+      height: 30%;
       margin-bottom: 0;
       opacity: 1;
-      h1#portfolio{
+      h1#portfolio {
         padding: 0;
         padding-top: 3%;
         font-size: 9em;
         color: $cust-orange;
         text-align: center;
       }
-      span{
+      span {
         margin-left: 15%;
-        margin-bottom: 1%;
-        font-size: 5em; }
-      a#right_side{
+        margin-bottom: 20%;
+        font-size: 5em;
+      }
+      a#right_side {
         width: auto;
         height: auto;
         color: $cust-orange;
         position: absolute;
         top: 29%;
         right: 15%;
-        font-size: 3em;
+        font-size: 1.5em;
         font-weight: 600;
         text-align: right;
       }
     }
-    div#content{
+    div#content {
       width: 100%;
-      ul{
+      ul {
         opacity: .9;
         height: 100%;
-        width: 75%;
+        width: 95%;
         list-style: none;
         margin-right: auto;
         margin-left: auto;
-        li{
+        li {
           margin-top: 4%;
           margin-bottom: 2%;
           height: 35%;
-          width: 100%;
+          width: 33%;
           -webkit-box-shadow: -5px 7px 19px 0px #333333;
           -moz-box-shadow: -5px 7px 19px 0px #333333;
           box-shadow: -5px 7px 19px 0px #333333;
           border-radius: 5px 5px;
-          h1{
+          h1 {
+
             text-align: center;
             border-radius: 2px;
-            font-size: 2em;
+            font-size: 3em;
             background-color: $cust-orange;
             color: white;
             width: 100%;
-            height: 20%;
+            height: auto;
             opacity: 1;
           }
-          div#bottom_bar{
+          div#bottom_bar {
             text-align: right;
             position: relative;
             height: 30%;
@@ -254,14 +267,14 @@ div#content{
             bottom: -53%;
             border-radius: 5px;
             opacity: 1;
-            img{
+            img {
               float: right;
               display: block;
               height: 50%;
               width: auto;
               margin-right: 2%;
             }
-            button#demo{
+            button#demo {
               float: right;
               width: 15%;
               height: 100%;
@@ -277,5 +290,501 @@ div#content{
         }
       }
     }
+  }
+  @media(max-width: $breakpoint-tablet) {
+    div#utility {
+      background-color: #333333;
+      cursor: default;
+      padding-top: 2%;
+      color: $cust-orange;
+      height: 30%;
+      margin-bottom: 0;
+      opacity: 1;
+      h1#portfolio {
+        padding: 0;
+        padding-top: 3%;
+        font-size: 4em;
+        color: $cust-orange;
+        text-align: center;
+      }
+      span {
+        position: absolute;
+        top: 20%;
+        margin-left: 15%;
+        font-size: 3em;
+      }
+      a#right_side {
+        width: auto;
+        height: auto;
+        color: $cust-orange;
+        position: absolute;
+        top: 29%;
+        right: 15%;
+        font-size: .8em;
+        font-weight: 600;
+        text-align: right;
+      }
+    }
+    div#content {
+      width: 100%;
+      ul {
+        opacity: .9;
+        height: 100%;
+        width: 95%;
+        list-style: none;
+        margin-right: auto;
+        margin-left: auto;
+        li {
+          margin-top: 4%;
+          margin-bottom: 2%;
+          height: 35%;
+          width: 33%;
+          -webkit-box-shadow: -5px 7px 19px 0px #333333;
+          -moz-box-shadow: -5px 7px 19px 0px #333333;
+          box-shadow: -5px 7px 19px 0px #333333;
+          border-radius: 5px 5px;
+          h1 {
+            text-align: center;
+            border-radius: 2px;
+            font-size: 1.7em;
+            background-color: $cust-orange;
+            color: white;
+            width: 100%;
+            height: auto;
+            opacity: 1;
+          }
+          div#bottom_bar {
+            text-align: right;
+            position: relative;
+            height: 30%;
+            width: auto;
+            bottom: -35%;
+            border-radius: 5px;
+            opacity: 1;
+            img {
+              float: right;
+              display: block;
+              height: 50%;
+              width: auto;
+              margin-right: 2%;
+            }
+            button#demo {
+              float: right;
+              width: 15%;
+              height: 100%;
+              opacity: 1;
+              padding: 1%;
+              border-radius: 10%;
+              color: white;
+              font-weight: bold;
+              font-size: 1em;
+              background-color: $cust-orange;
+            }
+          }
+        }
+      }
+    }
+  }
+
+}
+
+/*
+@media(orientation: landscape) and (max-width: $breakpoint-desk-lrg) {
+  div#utility {
+    background-color: #333333;
+    cursor: default;
+    padding-top: 2%;
+    color: $cust-orange;
+    height: 30%;
+    margin-bottom: 0;
+    opacity: 1;
+    h1#portfolio {
+      padding: 0;
+      padding-top: 5%;
+      font-size: 7em;
+      color: $cust-orange;
+      text-align: center;
+    }
+    span {
+      position: absolute;
+      margin-left: 10%;
+      font-size: 3em;
+      top: 23%;
+    }
+    a#right_side {
+      width: auto;
+      height: auto;
+      color: $cust-orange;
+      position: absolute;
+      top: 27%;
+      right: 15%;
+      font-size: 2em;
+      font-weight: 600;
+      text-align: right;
+    }
+  }
+  div#content {
+    background-color: $seattle_green;
+    width: 100%;
+    ul {
+      display: flex;
+      opacity: .9;
+      height: 100%;
+      width: 95%;
+      list-style: none;
+      margin-right: auto;
+      margin-left: auto;
+      li {
+        margin: 1%;
+        //margin-top: 4%;
+        //margin-bottom: 2%;
+        height: 35%;
+        width: 30%;
+        -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        border-radius: 5px 5px;
+        h1 {
+          text-align: center;
+          border-radius: 2px;
+          font-size: 2em;
+          background-color: $cust-orange;
+          color: white;
+          width: 100%;
+          height: 20%;
+          opacity: 1;
+        }
+        div#bottom_bar {
+          text-align: right;
+          position: relative;
+          height: 30%;
+          width: auto;
+          bottom: -53%;
+          border-radius: 5px;
+          opacity: 1;
+          img {
+            float: right;
+            display: block;
+            height: 50%;
+            width: auto;
+            margin-right: 2%;
+          }
+          button#demo {
+            float: right;
+            width: 15%;
+            height: 100%;
+            opacity: 1;
+            padding: 1%;
+            border-radius: 10%;
+            color: white;
+            font-weight: bold;
+            font-size: 1em;
+            background-color: $cust-orange;
+          }
+        }
+      }
+    }
+  }
+  @media(min-width: $breakpoint-desk-lrg) {
+    div#utility {
+      background-color: #333333;
+      cursor: default;
+      padding-top: 2%;
+      color: $cust-orange;
+      height: 30%;
+      margin-bottom: 0;
+      opacity: 1;
+      h1#portfolio {
+        padding: 0;
+        padding-top: 3%;
+        font-size: 9em;
+        color: $cust-orange;
+        text-align: center;
+      }
+      span {
+        margin-left: 15%;
+        margin-bottom: 1%;
+        font-size: 5em;
+      }
+      a#right_side {
+        width: auto;
+        height: auto;
+        color: $cust-orange;
+        position: absolute;
+        top: 29%;
+        right: 15%;
+        font-size: 3em;
+        font-weight: 600;
+        text-align: right;
+      }
+    }
+    div#content {
+      width: 100%;
+      ul {
+        opacity: .9;
+        height: 100%;
+        width: 95%;
+        list-style: none;
+        margin-right: auto;
+        margin-left: auto;
+        li {
+          margin-top: 4%;
+          margin-bottom: 2%;
+          height: 35%;
+          width: 33%;
+          -webkit-box-shadow: -5px 7px 19px 0px #333333;
+          -moz-box-shadow: -5px 7px 19px 0px #333333;
+          box-shadow: -5px 7px 19px 0px #333333;
+          border-radius: 5px 5px;
+          h1 {
+
+            text-align: center;
+            border-radius: 2px;
+            font-size: 3em;
+            background-color: $cust-orange;
+            color: white;
+            width: 100%;
+            height: auto;
+            opacity: 1;
+          }
+          div#bottom_bar {
+            text-align: right;
+            position: relative;
+            height: 30%;
+            width: auto;
+            bottom: -53%;
+            border-radius: 5px;
+            opacity: 1;
+            img {
+              float: right;
+              display: block;
+              height: 50%;
+              width: auto;
+              margin-right: 2%;
+            }
+            button#demo {
+              float: right;
+              width: 15%;
+              height: 100%;
+              opacity: 1;
+              padding: 1%;
+              border-radius: 10%;
+              color: white;
+              font-weight: bold;
+              font-size: 1em;
+              background-color: $cust-orange;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+*/
+
+@media(orientation: portrait) {
+  div#utility {
+    background-color: #333333;
+    cursor: default;
+    padding-top: 2%;
+    color: $cust-orange;
+    height: 20%;
+    width: 100%;
+    margin-bottom: 0;
+    opacity: 1;
+    h1#portfolio {
+      padding: 0;
+      padding-top: 5%;
+      font-size: 4em;
+      width: auto;
+      color: $cust-orange;
+      text-align: center;
+    }
+    span {
+      position: absolute;
+      top: 15%;
+      left: 7%;
+      font-size: 2em;
+    }
+    a#right_side {
+      width: auto;
+      height: auto;
+      color: $cust-orange;
+      position: absolute;
+      top: 17%;
+      right: 8%;
+      font-size: .8em;
+      font-weight: 800;
+      text-align: right;
+    }
+  }
+  div#content {
+    background-color: $seattle_green;
+    width: auto;
+    height: 100%;
+    ul {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      opacity: .9;
+      height: 100%;
+      width: 100%;
+      list-style: none;
+      padding-top: 5%;
+      //margin: 0 5% 0 auto;
+      li {
+        margin: 2%;
+        //margin-top: 4%;
+        //margin-bottom: 2%;
+        height: 25%;
+        width: 90%;
+        -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+        border-radius: 5px 5px;
+        h1 {
+          text-align: center;
+          border-radius: 2px;
+          font-size: 1.8em;
+          background-color: $cust-orange;
+          color: white;
+          width: 100%;
+          height: 20%;
+          opacity: 1;
+        }
+        div#bottom_bar {
+          text-align: right;
+          position: relative;
+          height: 30%;
+          width: auto;
+          bottom: -53%;
+          border-radius: 5px;
+          opacity: 1;
+          img {
+            float: right;
+            display: block;
+            height: 50%;
+            width: auto;
+            margin-right: 2%;
+          }
+          button#demo {
+            float: right;
+            width: 15%;
+            height: 100%;
+            opacity: 1;
+            padding: 1%;
+            border-radius: 10%;
+            color: white;
+            font-weight: bold;
+            font-size: 1em;
+            background-color: $cust-orange;
+          }
+        }
+      }
+    }
+  }
+
+  @media( min-width: $breakpoint-tablet){
+    div#utility {
+      background-color: #333333;
+      cursor: default;
+      padding-top: 2%;
+      color: $cust-orange;
+      height: 20%;
+      width: 100%;
+      margin-bottom: 0;
+      opacity: 1;
+      h1#portfolio {
+        padding: 0;
+        padding-top: 5%;
+        font-size: 6em;
+        width: auto;
+        color: $cust-orange;
+        text-align: center;
+      }
+      span {
+        position: absolute;
+        top: 15%;
+        left: 7%;
+        font-size: 3em;
+      }
+      a#right_side {
+        width: auto;
+        height: auto;
+        color: $cust-orange;
+        position: absolute;
+        top: 17%;
+        right: 8%;
+        font-size: .8em;
+        font-weight: 800;
+        text-align: right;
+      }
+    }
+    div#content {
+      background-color: $seattle_green;
+      width: auto;
+      height: 100%;
+      ul {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        opacity: .9;
+        height: 100%;
+        width: 100%;
+        list-style: none;
+        padding-top: 5%;
+        //margin: 0 5% 0 auto;
+        li {
+          margin: 2%;
+          //margin-top: 4%;
+          //margin-bottom: 2%;
+          height: 25%;
+          width: 90%;
+          -webkit-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+          -moz-box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: -5px 7px 19px 0px rgba(0, 0, 0, 0.75);
+          border-radius: 5px 5px;
+          h1 {
+            text-align: center;
+            border-radius: 2px;
+            font-size: 1.8em;
+            background-color: $cust-orange;
+            color: white;
+            width: 100%;
+            height: 20%;
+            opacity: 1;
+          }
+          div#bottom_bar {
+            text-align: right;
+            position: relative;
+            height: 30%;
+            width: auto;
+            bottom: -53%;
+            border-radius: 5px;
+            opacity: 1;
+            img {
+              float: right;
+              display: block;
+              height: 50%;
+              width: auto;
+              margin-right: 2%;
+            }
+            button#demo {
+              float: right;
+              width: 15%;
+              height: 100%;
+              opacity: 1;
+              padding: 1%;
+              border-radius: 10%;
+              color: white;
+              font-weight: bold;
+              font-size: 1em;
+              background-color: $cust-orange;
+            }
+          }
+        }
+      }
+    }
+
   }
 }
