--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -38,16 +38,12 @@
 <div id="seattle_based_slogan">
 </div>
 <span id="banner-text">
-  <h1> SEATTLE BASED </h1>
-  <p>Application Developer</p>
+  <h1> S.E. </h1>
 </span>
-<!--<img id="seattle_skyline"-->
-     <!--src="../../assets/medias/seattle_skyline.png">-->
 <img id="lane_detection" src="../../assets/medias/lane_detection.gif">
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
-  <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
-  <p id="portfolio" (click)="click_portfolio()"> Portfolio &rArr;</p>
+  <p id="portfolio" (click)="click_portfolio()"> Portfolio</p>
 </div>
 <div id="about_section">
   <div>
@@ -55,12 +51,12 @@
   <h2> About </h2>
   <br>
   <p>
-    I'm an application developer. I focus on IoT applications and development.
+    I'm a software engineer based in Seattle Washington. I focus on IoT applications and development.
     I've had the fundamental backgrounds: Physics, Math, Computer Science in my undergrad education.
     In 2015, I shifted my focus toward web application development.
     And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
     Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup
-    with some really passionate people. Now I'm looking for a position as a front-end application developer.
+    with some really passionate people. Now I'm looking for a position as a full-stack application developer.
   </p>
 </div>
 <div id="footer">
@@ -78,6 +74,5 @@
 <img id="social_icon" src="assets/medias/github.png">
 </a>
 </span>
-  <!--<p>{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</p>-->
   <p> &copy; Tanner Phan 2017</p>
 </div>
