--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -1,6 +1,7 @@
 @import '../palette.scss';
-@import url('https://fonts.googleapis.com/css?family=Slabo+13px|Suez+13px||Ultra');
 
+
+@import url('https://fonts.googleapis.com/css?family=Slabo+13px|Suez+13px||Ultra');
 @keyframes move-the-object {
   0%, 30% {
     -moz-transform: translateX(-30);
@@ -17,7 +18,6 @@
     //font-style: italic;
   }
 }
-
 @keyframes moving_background {
   0%, 30% {
     transform: translateX(50px) rotate(50deg) translateY(15px);
@@ -442,7 +442,7 @@ div#about_section {
 }
 */
 
-@media (max-width: $breakpoint-tablet - 1px){
+@media (max-width: $breakpoint-mobile){
   #seattle_based_slogan{
     filter: grayscale(.7) blur(2px);
     height: 20%;
@@ -455,25 +455,19 @@ div#about_section {
     opacity: .5;
   }
   #banner-text{
+    height: auto;
     text-align: center;
     position: absolute;
-    top: 2%;
-   h1 {
-     filter: grayscale(.5) blur(0px);
-     padding-top: 6%;
-     font-size: 2.5em;
-     opacity: .7;
-   }
-   p {
-     color: $cust-orange;
-     margin-left: 8px;
-     font-weight: 500;
-     font-size: 1em;
-     opacity: 1;
-   }
- }
+    //top: 5%;
+    h1 {
+      line-height: 80%;
+      filter: grayscale(.5) blur(0px);
+      font-size: 12em;
+      opacity: .7;
+    }
+  }
   #lane_detection{
-    height: 20%;
+    height: 12%;
     opacity: .7;
     display: block;
   }
@@ -492,19 +486,19 @@ div#about_section {
       width: auto;
       height: 140%;
       top: -40%;
-      right: -10%;
+      right: -5%;
       display: block;
       bottom: 10%;
       z-index: 0;
     }
-    p#portfolio {
+    #portfolio {
       position: relative;
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 1.2em;
-      top: -90%;
-      right: 10%;
+      font-size: 1em;
+      top: -120%;
+      right: 2%;
       animation: move-the-object 1s infinite;
     }
   }
@@ -512,24 +506,23 @@ div#about_section {
     width: 100%;
     height: 80%;
     background: #1d4e41 url('../../assets/medias/running.png');
-    background-position: center;
-    background-size: auto 100% ;
-    // background-size: cover;
+    background-size: auto 98%;
     background-repeat: no-repeat;
-    //filter: grayscale(50%);
+    background-position: 10% 50%;
     div {
       background: linear-gradient(black, #5e5e5e);
       opacity: .7;
       width: auto;
     }
     h2 {;
-      font-size: 4em;
+      font-size: 3em;
       display: block;
       width: 50%;
       position: relative;
-      color: $cust-orange;
+      color: ghostwhite;
+      opacity: .7;
       left: 5%;
-      top: -90%;
+      top: -87%;
     }
     p {
       position: relative;
@@ -545,6 +538,103 @@ div#about_section {
   }
 }
 
+@media (min-width: $breakpoint-mobile + 1px) and (max-width: $breakpoint-tablet + 1px){
+  #seattle_based_slogan{
+    filter: grayscale(.7) blur(2px);
+    height: 20%;
+    width: auto;
+    background-image: url(../../assets/medias/seattle_skyline.png);
+    background-size:  150% auto;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    opacity: .5;
+  }
+  #banner-text{
+    height: auto;
+    width: auto;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    position: absolute;
+    //top: 5%;
+    h1 {
+      line-height: 100%;
+      font-weight: bold;
+      filter: grayscale(.5) blur(0px);
+      font-size: 14em;
+      opacity: .7;
+    }}
+  #lane_detection{
+    height: 14%;
+    opacity: .7;
+    display: block;
+  }
+  #tanner_card {
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    color: $cust-orange;
+    font-size: 3em;
+    background-color: #dcdcdc;
+    background-size: contain;
+    background-repeat: no-repeat;
+    img {
+      position: relative;
+      width: auto;
+      height: 140%;
+      top: -40%;
+      right: -5%;
+      display: block;
+      bottom: 10%;
+      z-index: 0;
+    }
+    p#portfolio {
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      font-size: 1.5em;
+      top: -100%;
+      right: 12%;
+      animation: move-the-object 1s infinite;
+    }
+  }
+  #about_section {
+    width: 100%;
+    height: 90%;
+    background: #1d4e41 url('../../assets/medias/running.png');
+    background-size: auto 98%;
+    background-repeat: no-repeat;
+    background-position: 10% 50%;
+    //filter: grayscale(50%);
+    div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .7;
+      width: auto;
+    }
+    h2 {;
+      font-size: 4em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: ghostwhite;
+      opacity: .7;
+      left: 5%;
+      top: -85%;
+    }
+    p {
+      position: relative;
+      left: 5%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: white;
+      width: 85%;
+      height: auto;
+      z-index: 3;
+      font-size: 1em;
+    }
+  }
+}
 
 @media (min-width: $breakpoint-tablet) and (max-width: $breakpoint-desk-lrg - 1px){
   #seattle_based_slogan{
@@ -563,11 +653,13 @@ div#about_section {
   #banner-text{
     text-align: center;
     position: absolute;
-    top: 5%;
+    //top: 20%;
     h1 {
+      font-weight: bold;
+      line-height: 85%;
       filter: grayscale(.5) blur(0px);
-      padding-top: 2%;
-      font-size: 5em;
+      //padding-top: 2%;
+      font-size: 40em;
       opacity: .7;
     }
     p {
@@ -598,7 +690,7 @@ div#about_section {
       width: auto;
       height: 140%;
       top: -40%;
-      right: -10%;
+      right: -5%;
       display: block;
       bottom: 10%;
       z-index: 0;
@@ -665,15 +757,13 @@ div#about_section {
   #banner-text{
     position: absolute;
     text-align: center;
-    top: 5%;
+    //top: 20%;
     h1 {
-      font-size: 8em;
+      line-height: 85%;
+      color: black;
+      top: 14%;
+      font-size: 74em;
       opacity: .7;
-    }
-    p {
-      color: $cust-orange;
-      font-weight: lighter;
-      font-size: 3em;
     }
   }
   #lane_detection{
@@ -696,7 +786,7 @@ div#about_section {
       width: auto;
       height: 140%;
       top: -40%;
-      right: -10%;
+      right: -15%;
       display: block;
       bottom: 10%;
       z-index: 0;
@@ -730,7 +820,7 @@ div#about_section {
       display: block;
       width: 50%;
       position: relative;
-      color: $cust-orange;
+      color: $seattle_green;
       left: 10%;
       top: -80%;
     }
