--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -119,11 +119,16 @@ body{
       color: $cust-orange;
       text-align: center;
     }
-    span {
+    #back-arrow{
+      width: auto;
+      height: auto;
+      position: relative;
+      top: 20%;
+      //line-height: 100%;
       margin-left: 15%;
       font-size: 3em;
     }
-    a#right_side {
+    #right_side {
       width: auto;
       height: auto;
       color: $cust-orange;
@@ -174,8 +179,11 @@ body{
           bottom: -53%;
           border-radius: 5px;
           opacity: 1;
-          img {
+          #github {
             float: right;
+            position: relative;
+            //top: - 5%;
+            right: 5%;
             display: block;
             height: 50%;
             width: auto;
@@ -197,100 +205,6 @@ body{
       }
     }
   }
-  @media(min-width: $breakpoint-desk-lrg) {
-    div#utility {
-      background-color: #333333;
-      cursor: default;
-      padding-top: 2%;
-      color: $cust-orange;
-      height: 30%;
-      margin-bottom: 0;
-      opacity: 1;
-      h1#portfolio {
-        padding: 0;
-        padding-top: 3%;
-        font-size: 9em;
-        color: $cust-orange;
-        text-align: center;
-      }
-      span {
-        margin-left: 15%;
-        margin-bottom: 20%;
-        font-size: 5em;
-      }
-      a#right_side {
-        width: auto;
-        height: auto;
-        color: $cust-orange;
-        position: absolute;
-        top: 29%;
-        right: 15%;
-        font-size: 1.5em;
-        font-weight: 600;
-        text-align: right;
-      }
-    }
-    div#content {
-      width: 100%;
-      ul {
-        opacity: .9;
-        height: 100%;
-        width: 95%;
-        list-style: none;
-        margin-right: auto;
-        margin-left: auto;
-        li {
-          margin-top: 4%;
-          margin-bottom: 2%;
-          height: 35%;
-          width: 33%;
-          -webkit-box-shadow: -5px 7px 19px 0px #333333;
-          -moz-box-shadow: -5px 7px 19px 0px #333333;
-          box-shadow: -5px 7px 19px 0px #333333;
-          border-radius: 5px 5px;
-          h1 {
-
-            text-align: center;
-            border-radius: 2px;
-            font-size: 3em;
-            background-color: $cust-orange;
-            color: white;
-            width: 100%;
-            height: auto;
-            opacity: 1;
-          }
-          div#bottom_bar {
-            text-align: right;
-            position: relative;
-            height: 30%;
-            width: auto;
-            bottom: -53%;
-            border-radius: 5px;
-            opacity: 1;
-            img {
-              float: right;
-              display: block;
-              height: 50%;
-              width: auto;
-              margin-right: 2%;
-            }
-            button#demo {
-              float: right;
-              width: 15%;
-              height: 100%;
-              opacity: 1;
-              padding: 1%;
-              border-radius: 10%;
-              color: white;
-              font-weight: bold;
-              font-size: 1em;
-              background-color: $cust-orange;
-            }
-          }
-        }
-      }
-    }
-  }
   @media(max-width: $breakpoint-tablet) {
     div#utility {
       background-color: #333333;
@@ -307,9 +221,9 @@ body{
         color: $cust-orange;
         text-align: center;
       }
-      span {
+      #back-arrow {
         position: absolute;
-        top: 20%;
+        //top: 20%;
         margin-left: 15%;
         font-size: 3em;
       }
@@ -385,7 +299,101 @@ body{
       }
     }
   }
-
+  @media(min-width: $breakpoint-desk-lrg) {
+    div#utility {
+      background-color: #333333;
+      cursor: default;
+      padding-top: 2%;
+      color: $cust-orange;
+      height: 30%;
+      margin-bottom: 0;
+      opacity: 1;
+      h1{
+        padding: 0;
+        padding-top: 3%;
+        font-size: 9em;
+        color: $cust-orange;
+        text-align: center;
+      }
+      #back-arrow {
+        line-height: 20%;
+        margin-left: 15%;
+        margin-bottom: 20%;
+        font-size: 5em;
+      }
+      a#right_side {
+        width: auto;
+        height: auto;
+        color: $cust-orange;
+        position: absolute;
+        top: 30%;
+        right: 15%;
+        font-size: 1.2em;
+        font-weight: 600;
+        text-align: right;
+      }
+    }
+    div#content {
+      width: 100%;
+      ul {
+        opacity: .9;
+        height: 100%;
+        width: 95%;
+        list-style: none;
+        margin-right: auto;
+        margin-left: auto;
+        li {
+          margin-top: 4%;
+          margin-bottom: 2%;
+          height: 35%;
+          width: 33%;
+          -webkit-box-shadow: -5px 7px 19px 0px #333333;
+          -moz-box-shadow: -5px 7px 19px 0px #333333;
+          box-shadow: -5px 7px 19px 0px #333333;
+          border-radius: 5px 5px;
+          h1 {
+            text-align: center;
+            border-radius: 2px;
+            padding: 2%;
+            font-size: 2.5em;
+            background-color: $cust-orange;
+            color: white;
+            width: 100%;
+            height: auto;
+            opacity: 1;
+          }
+          div#bottom_bar {
+            text-align: right;
+            position: relative;
+            height: 30%;
+            width: auto;
+            bottom: -53%;
+            border-radius: 5px;
+            opacity: 1;
+            img {
+              float: right;
+              display: block;
+              height: 50%;
+              width: auto;
+              margin-right: 2%;
+            }
+            button#demo {
+              float: right;
+              width: 15%;
+              height: 100%;
+              opacity: 1;
+              padding: 1%;
+              border-radius: 10%;
+              color: white;
+              font-weight: bold;
+              font-size: 1em;
+              background-color: $cust-orange;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 /*
@@ -600,7 +608,9 @@ body{
       color: $cust-orange;
       text-align: center;
     }
-    span {
+    #back-arrow {
+      width: auto;
+      height: auto;
       position: absolute;
       top: 15%;
       left: 7%;
